test/functions/whereClauses/whereClauseNoFn2.good
whereClauseNoFn2.chpl:1: In function 'foo':
whereClauseNoFn2.chpl:1: error: unresolved call 'bar()'
